tests/error/comptime_expr_errors/list_empty.py
from tests.util import compile_guppy


@compile_guppy
def foo() -> None:
    xs = comptime([])
