tests/error/comptime_expr_errors/list_empty.err
Error: Cannot infer type (at $FILE:6:9)
  | 
4 | @compile_guppy
5 | def foo() -> None:
6 |     xs = comptime([])
  |          ^^^^^^^^^^^^ Cannot infer type variables in expression of type
  |                       `frozenarray[?T, 0]`

Guppy compilation failed due to 1 previous error
